# scaled-interview-data-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/methodology/: a2b.md  framing.md
docs/operations/: computation.md  python-tools.md  registry-and-checkpoint.md
docs/output/: example-report-structure.md
examples/mattress/: README.md  interview-card.md  transcript.md  walkthrough.md
prompt/: custom-gpt.md
scripts/: analyze_links.py  audit_report.py  build_matrices.py  cluster_interviews.py  common.py  export_checkpoint.py  validate_registry.py
templates/: interview-card.md  synthesis-report.md
tests/: test_end_to_end.py
tests/fixtures/: clusters.json  codebook.json  evidence_bank.json  evidence_mappings.json  synthesis_report.md
