[project]
name = "scaled-interview-data-assistant"
version = "0.1.0"
description = "Deterministic helpers for evidence-traceable JTBD/A2B interview synthesis."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "pydantic>=2.0",
  "typer>=0.9",
  "rich>=13.0",
  "pyyaml>=6.0",
  "openpyxl>=3.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
